fix(style): center ScrollToTop icon on mobile

--- a/src/Components/ScrollToTop/ScrollToTop.module.less
+++ b/src/Components/ScrollToTop/ScrollToTop.module.less
@@ -29,5 +29,6 @@
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
+        text-align: center;
     }
 }
